<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group19_homework2.taskmanager.ViewTask">

    <TextView
        android:id="@+id/textView"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/strtasktitle"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="108dp"
        android:layout_height="34dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/strtaskdate"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/tasktimestr"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="112dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/taskpriority"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:text="@string/strnotask"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton7"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="76dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:rotation="180"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="46dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="64dp"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton7"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:background="@android:color/background_light" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@android:color/background_light"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_media_next" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="57dp"
        android:layout_height="52dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/background_light"
        android:rotation="180"
        android:tint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_next" />

</android.support.constraint.ConstraintLayout>
